# k8s

./: Cargo.toml
addons/admission/: admission.yaml
addons/dashboard/: dashboard-access.yaml
addons/registry/: registry-access.yaml  registry.yaml
addons/security/: default-policy.yaml  privileged-policy.yaml
addons/storage/: helm.yaml  storage-class.yaml
etc/: ca.json  kubeadm.yaml
examples/shared-storage/: Dockerfile  resources.yaml  run.sh
examples/shared-storage/app/: app.go
src/: addons.rs  config_defs.rs  dashboard.rs  deployment_util.rs  main.rs  push_img.rs  service_util.rs  tasks.rs  vm.rs  watch.rs
src/addons/: crds.rs
tool/: Cargo.toml  Dockerfile
tool/src/: admit.rs  copy_controller.rs  main.rs  pv_controller.rs  typings.rs
