[package]
name = "k8s"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
clap = "3.0.0-beta.2"
once_cell = "1.5.2"
openssh = "0.7.0"
# rand = "0.7.3"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
tokio = {version="0.3.4", features = ["full"]}
xshell = "0.1.6"
