[package]
name = "k8s"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
clap = "3.0.0-beta.2"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_18"] }
kube = "0.43.0"
once_cell = "1.5.2"
openssh = "0.7.0"
rand = "0.8.0"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
tempfile = "3.1.0"
tokio = {version="0.3.4", features = ["full"]}
tokio-compat-02 = "0.1.2"
xshell = "0.1.6"

[workspace]
members = ["tool"]
