[package]
name = "k8s"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
clap = "3.0.0-beta.2"
k8s-openapi = { version = "0.10.0", default-features = false, features = ["v1_18"] }
kube = "0.47.0"
once_cell = "1.5.2"
openssh = "0.8.0"
rand = "0.8.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
tempfile = "3.1.0"
tokio = { version = "1.0.1", features = ["full"] }
tokio-compat-02 = "0.2.0"
xshell = "0.1.8"

[workspace]
members = ["tool"]
