[package]
name = "tool"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["tls"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
tokio = { version = "1.0.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.37"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
log = "0.4.11"
json-patch = "0.2.6"
base64 = "0.13.0"
kube = { version = "0.47.0" }
k8s-openapi = { version = "0.10.0", default-features = false, features = ["v1_18"] }
kube-runtime = { version = "0.47.0" }
futures = "0.3.9"
tokio-compat-02 = "0.2.0"
