[package]
name = "tool"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["tls"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
tokio = { version = "1.0.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.38"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
json-patch = "0.2.6"
base64 = "0.13.0"
kube = { version = "0.47.0" }
k8s-openapi = { version = "0.10.0", default-features = false, features = ["v1_18"] }
kube-runtime = { version = "0.47.0" }
futures = "0.3.9"
tokio-compat-02 = "0.2.0"
kube-utils = { git = "https://github.com/mikailbag/kube-utils", rev = "4fe60d7b" }
tracing = { version = "0.1.22", features = ["log"] }
kube-derive = "0.47.0"
schemars = "0.8.0"
tokio-util = "0.6.1"
thiserror = "1.0.23"
tracing-futures = "0.2.4"
chrono = "0.4.19"
rand = "0.8.2"
tracing-subscriber = "0.2.15"
